--- a/messaging-examples/build.gradle
+++ b/messaging-examples/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile project(':messaging-client')
     compile project(':messaging-client-rx')
     compile project(':messaging-common')
+    compile project(':messaging-driver')
     compile project(':zookeeper-discovery-service')
 
     //RxJava
