--- a/messaging-discovery/build.gradle
+++ b/messaging-discovery/build.gradle
@@ -20,8 +20,8 @@ version = '0.0.1'
 
 dependencies {
     compile project(':messaging-common')
-    compile project(':messaging-driver')
 
-    //AMQP Proton
-    compile 'org.apache.qpid:proton-j:0.9.1'
+    compile 'uk.co.real-logic:Agrona:0.3.2-SNAPSHOT'
+    compile 'uk.co.real-logic:aeron-client:0.1-SNAPSHOT'
+    compile 'uk.co.real-logic:aeron-common:0.1-SNAPSHOT'
 }
